--- a/.golangci.yml
+++ b/.golangci.yml
@@ -75,6 +75,7 @@ linters-settings:
     sections:
       - standard # Standard section: captures all standard packages.
       - default # Default section: contains all imports that could not be matched to another section type.
+      - prefix(github.com/0xsequence/authcontrol) # Custom section: groups all imports with the specified Prefix.
     # Skip generated files.
     # Default: true
     skip-generated: true
